--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,27 @@
+
+.container-logout-button {
+    position: absolute;
+    display: flex;
+    align-self: flex-end;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 50px;
+    /* background-color: aqua; */
+}
+
 .logout-button {
     position: relative;
-    display: flex;
     /* flex-direction: row; */
-    /* width: 100%;
-    height: 100%; */
-    background-color: aqua;
-    /* align-items: end;
-    justify-content: end; */
-    margin-bottom: 0px;
+    width: 80%;
+    /* height: 100%; */
+    /* margin-bottom: 0px; */
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100px;
 }
