--- a/frontend/src/food_service/pages/create/index.css
+++ b/frontend/src/food_service/pages/create/index.css
@@ -16,7 +16,7 @@
     font-size: 26px;
 }
 
-.create-form .ant-form-item-label {
+/* .create-form .ant-form-item-label {
     font-weight: bold;
     width: 100%;
 }
@@ -25,9 +25,9 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-}
+} */
 
-.create-form .ant-btn-primary {
+/* .create-form .ant-btn-primary {
     background-color: #1890ff;
     border-color: #1890ff;
 }
@@ -35,4 +35,4 @@
 .create-form .ant-btn-primary:hover {
     background-color: #40a9ff;
     border-color: #40a9ff;
-}
+} */
