--- a/frontend/src/payment/App.css
+++ b/frontend/src/payment/App.css
@@ -2,156 +2,217 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Arial', sans-serif;
-  background-color: #f0f0f0;
+  /* background-color: #f0f0f0; */
 }
 
-.app-container {
-  /* max-width: 1200px; */
+.payment-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
   margin: auto;
-  padding: 10px;
-  /* background-color: #030303; */
-  /* box-shadow: 0 4px 8px rgba(0,0,0,0.1); */
-  /* border-radius: 8px; */
+  gap: 10px;
   text-align: center;
 }
 
-.app-container header {
+.payment-header {
+  position: relative;
   display: flex;
-  background-color: #ff85b3;
-  color: white;
-  padding: 20px;
-  font-size: 24px;
   align-items: center;
   justify-content: center;
-}
-
-.payment-section, .banking-section {
-  margin-top: 20px;
-  padding: 20px;
-  background-color: #f4f4f4;
-  border-radius: 8px;
-}
-
-.app-container table {
   width: 100%;
-  margin-top: 20px;
-}
-
-.app-container th,.app-container td {
-  text-align: left;
-  padding: 10px;
-  border-bottom: 1px solid #ddd;
-  background-color: #f0e1f4;
-}
-
-.app-container button {
-  background-color: #ff85b3;
-  border: none;
+  height: 100px;
+  margin: 0;
+  border-radius: 10px;
+  background-color: #0080ff;
   color: white;
-  padding: 10px 20px;
-  margin: 10px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
 }
 
-.app-container button:hover {
-  background-color: #ff65a3;
+.icon-payment {
+  display: flex;
+  width: 50px;
+  height: 100%;
 }
 
-.app-container .tabs button {
-  padding: 10px 20px;
-  margin-right: 5px;
-  background-color: #070707;
-  border: rgb(255, 255, 255);
-  border-bottom: 2px solid transparent;
-  cursor: pointer;
-}
-
-.app-container .tabs button:hover {
-  background-color: #222222;
-}
-
-.app-container .receipt-section {
-  background-color: #b9ffdd;
-  padding: 20px;
-  margin-top: 20px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.booking-table {
-  color: black;
-  font-family: 'Arial', sans-serif;
+.payment-content {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  /* align-items: center;  */
+  justify-items: center; 
+  gap: 20px;
   width: 100%;
-  height: 400px;
-  border-collapse: collapse;
+  /* height: 100%; */
+  padding: 16px;
   overflow: auto;
 }
 
-.order-table {
-  color: black;
-  font-family: 'Arial', sans-serif;
-  width: 100%;
-  height: 420px;
-  border-collapse: collapse;
-  overflow: auto;
-}
-
-.order-table h2 {
-  text-align: center;
-}
-
-.payment-menu-image {
-  width: 150px;
-  height: 150px;
-  object-fit: cover;
-}
-
-/* .app-container .receipt-section h2 {
-  color: #000000;
-} */
-
-/* .app-container .table {
-  width: 100%;
-  border-collapse: collapse;
-} */
-
-/* .app-container .table th,.app-container.table td {
-  padding: 15px;
-  border: 1px solid #ddd;
-  text-align: left;
-} */
-
-/* .app-container .table th {
-  background-color: #f0f0f0;
-} */
-
-/* .app-container .img-responsive {
-  max-width: 100%;
+.payment-card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 550px;
+  min-width: 400px;
+  min-height: 350px;
   height: auto;
+  /* max-height: 100px; */
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 #00000033, 0 6px 20px 0 #00000030;
+  background-color: white;
+  /* overflow: auto; */
+}
+
+.card-header {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: auto;
+  height: auto;
+  font-weight: 1000px;
+  border-radius: 10px;
+  gap: 10px;
+  background-color: #f2f2f2;
+  color: #000000;
+  overflow: auto;
+}
+
+/* .card-header h1 {
+  color: #0080ff;
 } */
 
-/* .app-container .contact-reception {
-  margin-top: 20px;
-  color: #333;
-  font-style: italic;
-} */
+.card-header h1, .card-header h2 {
+  margin: 0px;
+  
+}
 
+.card-header-room-data {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 80%;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #0080ff;
+  color: #ffffff;
+}
 
-
-/* .order-table table {
+.table-booking-list {
+  /* position: absolute; */
   width: 100%;
-  margin: 20px 0;
-} */
+  /* margin: 10px; */
+  /* background-color: #0080ff; */
+}
 
-/* .order-table th, .order-table td {
+.container-btn-payment {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+  gap: 10px;
+}
+
+.container-order-list {
+  position: relative;
+  display: flex;
+  /* flex-direction: r; */
+  align-items:start;
+  justify-content: center;
+  width: 100%;
+  height: 320px;
+  max-height: 350px;
+  overflow: auto;
+}
+
+
+.table-order-list {
+  /* position: absolute; */
+  width: 100%;
+  /* height: 100%; */
+  padding: 5px;
+  margin: 10px;
   text-align: left;
-  padding: 8px;
-  border-bottom: 1px solid black;
-} */
+  border-collapse: collapse;
+  
+  /* background-color: #0080ff; */
+}
 
-/* .order-table th {
-  background-color: #f0e1f4;
-} */
+.table-order-list thead {
+  /* background-color:#e3e3e3; */
+  border-bottom: 1px solid #000000;
+  border-collapse: collapse
+}
+
+.table-order-list th, .table-order-list td {
+  padding: 8px;
+}
+
+.container-btn-payment button {
+  width: 80px;
+  height: 30px;
+  /* border: none; */
+  border-radius: 10px;
+  cursor: pointer;
+  color: #ffffff;
+  transition: background-color 0.25s, color 0.25s, border-color 0.25s, filter 0.25s;
+}
+
+.payment-card-total-amount {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 5px;
+  border-radius: 5px;
+  /* text-align: center; */
+  font-size: 8px;
+  /* display: flex; */
+  /* flex-direction: r; */
+  /* align-items:start;
+  justify-content: center; */
+  height: 30px;
+  background-color: #f2f2f2;
+}
+
+/* Button */
+.btn-confirm-booking {
+  border: 2px solid #0080ff;
+  background-color: #0080ff;
+}
+
+.btn-confirm-booking:hover {
+  color: #0080ff;
+  background-color: white;
+}
+
+.btn-cancel-booking {
+  border: 2px solid red;
+  background-color: #ff0000;
+}
+
+.btn-cancel-booking:hover {
+  border: 2px solid red;
+  color: red;
+  background-color: #ffffff;
+}
+
+.btn-cancel-order {
+  width: 60px;
+  height: 30px;
+  border: 2px solid red;
+  border-radius: 10px;
+  cursor: pointer;
+  color: rgb(255, 0, 0);
+  background-color: #ffffff;
+  transition: background-color 0.25s, color 0.25s, border-color 0.25s, filter 0.25s;
+}
+
+.btn-cancel-order:hover {
+  color: white;
+  background-color: #ff0000;
+}
 
