--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,19 +1,22 @@
 
 .container-logout-button {
-    position: absolute;
+    /* position: absolute; */
     display: flex;
-    align-self: flex-end;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 50px;
+    height: auto;
+    gap: 10px;
     /* background-color: aqua; */
 }
 
 .logout-button {
     position: relative;
+    display: inline;
+    /* align-items: center; */
+    /* justify-content: center; */
     /* flex-direction: row; */
-    width: 80%;
+    /* width: 90%; */
     /* height: 100%; */
     /* margin-bottom: 0px; */
 }
